2010-05-04  Murray Cumming  <murrayc@murrayc.com>

	Documentation: Improvements.

	* libxml++/libxml++.h: Expand the main page text, linking to the tutorial
    and to important classes.
	* libxml++/parsers/domparser.h:
	* libxml++/schema.h: Correct the class descriptions.
	* libxml++/parsers/textreader.h: Add a class description.
	* libxml++/nodes/element.h:
	* libxml++/nodes/node.h:
	* libxml++/parsers/saxparser.h:
	* libxml++/validators/schemavalidator.h:
    Correct @newin2p2* to @newin{2,*} now that we use mm-common.

2010-04-27  David King  <davidk@openismus.com>

	Further documentation main page improvements

	* libxml++/libxml++.h: Some minor improvements.

2010-04-23  David King  <davidk@openismus.com>

	Documentation main page improvements

	* libxml++/libxml++.h: Add external links and compilation example.

2010-04-16  David King  <davidk@openismus.com>

	Minor documentation update

	* docs/index.html: Link to latest gnome.org resources.
	* libxml++/libxml++.h: Add minimal documentation for main page.

2010-04-06  Murray Cumming  <murrayc@murrayc.com>

    .pc file: Add datarootdir.

	* libxml++-2.6.pc.in: Add datarootdir and datadir, as in the gtkmm .pc.in
    file, because I started seeing this warning when running autogen.sh in Glom:
    Variable 'datarootdir' not defined in '/opt/gnome228/lib/pkgconfig/libxml++-2.6.pc'

2010-04-03  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/libxml++.sln:
	* MSVC_Net2008/libxml++.sln: Add dom_parser_raw project to the
	solution files.

2010-03-30  Murray Cumming  <murrayc@murrayc.com>

    Stop exceptions when using std::cout and UTF-8.

	* examples/*/main.cc: Initialize the global C and C++ locale to prevent
    exceptions when ouputing a ustring (with non-ASCII UTF-8) to std::cout.
    We don't see this problem when writing gtkmm apps because gtk_init() (via
    Gtk::Main) initializes the C locale correctly.

    Thanks to Daniel Elstner for the solution (he will document it properly